<resources>
    <string name="app_name">Atlas</string>
    <string name="enhance_the_culture">Enhance the Culture</string>
    <string name="together">Together</string>
    <string name="learn_more">Learn more</string>
    <string name="login">Log In</string>
    <string name="or">or</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="username_email">Username/Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="fullname">%1$s %2$s</string>
    <string name="username">Username</string>
    <string name="empty_username_email_field">Please enter your username or e-mail</string>
    <string name="empty_password">Please enter your password</string>
    <string name="wrong_credentials">Wrong username/email or password</string>
    <string name="connection_failure">Connection failure</string>
    <string name="different_confirm_password">Password must be same</string>
    <string name="empty_email">Please enter your email</string>
    <string name="empty_firstname">Please enter your firstname</string>
    <string name="empty_lastname">Please enter your lastname</string>
    <string name="empty_title">Please enter a title</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="continent">Continent</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="enter_url">Enter a URL</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="successful_create_item">You successfully created a new topic!</string>
    <string name="shared_pref_file">atlas_conf</string>
    <string name="failed_create_item">Item creation failed</string>
    <string name="create_item_no_images">Topic has been created without images</string>
    <string name="failed_profilgetuserinformation">Failed to get user information</string>
    <string name="profilpage_cultural_heritages_list">My Cultural Heritages</string>
    <string name="profilpage_gallery">Gallery</string>
    <string name="profilpage_my_favorites">My Favorites</string>
    <string name="profilpage_settings">Settings</string>
    <string name="profilpage_nav_profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="image_upload_error">Failed to upload local images</string>
    <string name="no_title">No Title</string>
    <string name="no_description">No Description</string>
    <string name="tags">Tags</string>
    <string name="error_occurred">An error occurred.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="unable_to_delete">Unable to delete item</string>
    <string name="successful_item_delete">Successfully deleted item</string>
    <string name="comments">Comments</string>
    <string name="write_something">Write something&#8230;</string>
    <string name="send">Send</string>
    <string name="write_comment">Write comment</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="no_items">No items</string>
    <string name="title_activity_own_item">OwnItemActivity</string>
    <string name="title_activity_getlocation">GetLocation</string>
    <string name="profile_header_img">Profile header image</string>
    <string name="user_profile_image">User profile image</string>
    <string name="take_photo_image">Take photo image</string>
    <string name="img_list_view">Image in a image list view</string>
    <string name="img_item_list">Image of item in item list</string>
    <string name="commenter_name">Commenter Name</string>
    <string name="comment_date">Comment date</string>
    <string name="comment_text">Comment text</string>
    <string name="place">Place</string>
    <string name="location">Location</string>
    <string name="url">URL</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="unable_get_location">Unable to find location</string>
    <string name="lat_long_location">%1$f %2$f</string>
    <string name="year_string">%1$s - %2$s</string>
    <string name="year_entering_warning">Enter years between %1$d and %2$d</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="uploading_local_images">Uploading local images... Hang tight</string>
    <string name="succesful_edit_item">You sucessfully edited the item!</string>
    <string name="error_edit_item">An error occurred during item editing</string>
    <string name="error_favorite">An error occured in favorite feature</string>
    <string name="succesful_favorite">You sucessfully added the item to favorites!</string>
    <string name="succesful_unfavorite">You sucessfully removed the item from favorites!</string>
    <string name="seconds_ago"> seconds ago</string>
    <string name="minutes_ago"> minutes ago</string>
    <string name="hours_ago"> hours ago</string>
    <string name="days_ago"> days ago</string>
    <string name="second_ago">1 second ago</string>
    <string name="minute_ago">1 minute ago</string>
    <string name="hour_ago">1 hour ago</string>
    <string name="yesterday">yesterday</string>
    <string name="you_may_also_like">You May Also Like</string>
    <string name="created_by">%1$s</string>
    <string name="profilpage_nearbyitems">Find Nearby Heritages</string>
    <string name="profilpage_nav_nearby">Nearby Heritages</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="nearby_heritages">Nearby Heritages</string>
    <string name="open_gps_settings">Do you want open GPS setting?</string>
    <string name="fullscreen_img">Fullscreen image</string>
    <string name="my_heritages">My Heritages</string>
    <string name="my_favourites">My Favourites</string>
    <string name="featured">Featured</string>
    <string name="no_date">No date</string>
    <string name="no_location">No location</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="update">Update!</string>
    <string name="edit_successful">Successfully edited!</string>
    <string name="edit_profile_title">Profile Settings</string>
</resources>
