<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_profile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_title"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/edit_profile_username_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/edit_profile_username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:text="@string/username" />

        <TextView
            android:id="@+id/edit_profile_email_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edit_profile_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/email" />

        <TextView
            android:id="@+id/edit_profile_firstname_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstname" />

        <EditText
            android:id="@+id/edit_profile_firstname_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/firstname" />

        <TextView
            android:id="@+id/edit_profile_lastname_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastname" />

        <EditText
            android:id="@+id/edit_profile_lastname_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/lastname" />

        <TextView
            android:id="@+id/edit_profile_pp_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_image" />

        <EditText
            android:id="@+id/edit_profile_pp_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/user_profile_image" />

        <TextView
            android:id="@+id/edit_profile_oldp_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old_password" />

        <EditText
            android:id="@+id/edit_profile_oldp_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/edit_profile_newp_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password" />

        <EditText
            android:id="@+id/edit_profile_newp_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/edit_profile_confp_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/edit_profile_confp_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />
    </LinearLayout>


</ScrollView>