<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <item
            android:id="@+id/profil"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profilpage_nav_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <item
            android:id="@+id/nearbyitems"
            android:icon="@drawable/nearby_icon"
            android:title="@string/profilpage_nav_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </group>
</menu>