<?xml version="1.0" encoding="utf-8"?>
<!-- TODO: create multiple dpi versions of background image in png format -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_auth_menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:weightSum="1"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />

    <TextView
        android:id="@+id/enhance_culture_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enhance_the_culture"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/together_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/together"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/large_header_size"
        android:textStyle="bold"
        android:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" />

    <Button
        android:id="@+id/learn_more_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.025"
        android:background="@android:color/transparent"
        android:text="@string/learn_more"
        android:textAllCaps="false"
        android:textColor="@color/url_link_color"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/button_margin_size"
        android:layout_marginRight="@dimen/button_margin_size"
        android:background="@drawable/auth_button_shape"
        android:text="@string/login"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/or_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.1"
        android:gravity="center_vertical"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/button_margin_size"
        android:layout_marginRight="@dimen/button_margin_size"
        android:background="@drawable/auth_button_shape"
        android:text="@string/signup" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />
</LinearLayout>