<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/description_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="4"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/continent_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/continent"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/country_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/city_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/url_button"
            android:background="@drawable/ic_public_black_24dp"
            android:layout_width="50dp"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/gallery_button"
            android:background="@drawable/ic_photo_library_black_24dp"
            android:layout_marginEnd="5dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/url_button" />

        <Button
            android:id="@+id/camera_button"
            android:layout_width="50dp"
            android:background="@drawable/ic_add_a_photo_black_24dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/gallery_button" />

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/create_button"
            android:visibility="invisible" />

    </RelativeLayout>

    <ListView
        android:id="@+id/image_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>