<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:gravity="bottom"
    android:background="@color/secondaryColor"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.1" />

    <ImageView
        android:src="@drawable/atlas_icon"
        android:layout_weight="0.50"
        android:layout_gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:contentDescription="@string/user_profile_image"
        android:id="@+id/nav_pimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="70dp"
        android:maxWidth="70dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/nav_pname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/primaryTextColor"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:id="@+id/nav_pmail"
        android:textColor="@color/primaryTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

</LinearLayout>
