<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardBackgroundColor="@color/primaryLightColor"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:id="@+id/header_layout"
            android:weightSum="1">

            <TextView
                android:id="@+id/title_textview"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/title"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/favorite_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableStart="@drawable/ic_favorite_border_black_24dp" />


        </LinearLayout>

        <ImageView
            android:contentDescription="@string/img_item_list"
            android:id="@+id/icon_imageview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/header_layout"
            android:layout_marginBottom="5dp"
            android:layout_alignParentStart="true"
            android:src="@android:drawable/ic_media_play" />

        <include
            android:id="@+id/tag1"
            layout="@layout/tag_recyclerview_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_below="@+id/icon_imageview"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/tag_horizontal_margin"
            android:padding="3dp" />


        <include
            android:id="@+id/tag2"
            layout="@layout/tag_recyclerview_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="5dp"
            android:layout_below="@+id/icon_imageview"
            android:layout_toEndOf="@+id/tag1"
            android:padding="3dp" />

        <include
            android:id="@+id/tag3"
            layout="@layout/tag_recyclerview_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_below="@+id/icon_imageview"
            android:layout_toEndOf="@+id/tag2"
            android:padding="3dp" />

        <TextView
            android:id="@+id/description_textview"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_below="@+id/tag1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:scrollHorizontally="false"
            android:text="@string/description"
            android:textSize="14sp" />

        <View
            style="@style/HorizontalDivider"
            android:layout_above="@+id/footer_layout"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp" >
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignWithParentIfMissing="true"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="horizontal"
            android:id="@+id/footer_layout"
            android:weightSum="4" >


            <TextView
                android:id="@+id/location_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:layout_marginTop="2dp"
                android:drawableStart="@drawable/ic_place_black_24dp"
                android:gravity="start"
                android:ellipsize="end"
                android:maxLines="1" />

            <View
                style="@style/VerticalDivider"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp" />

            <TextView
                android:id="@+id/year_textview"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginTop="2dp"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:gravity="center" />

            <View
                style="@style/VerticalDivider"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp" />

            <TextView
                android:id="@+id/creator_textview"
                android:layout_width="0dp"
                android:layout_weight="1.25"
                android:layout_marginTop="2dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:textStyle="italic" />


        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>
